tests/syntax_tests/data/parsing/errors/expressions/array.res
// missing ] before )
let xs = x.map(key => [key, predicates[key])
